--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
                         <a href="./project1/index.html" class="more-details"> View project</a>
                     </strong>
                 </div>
+                <div class="project-card">
+                <div class="project-image">
+                    <img src=".\img-portfolio\capture_project_1.png" alt="screenshot-of-my-project" height="200px">
+                </div>
+                <div class="project-info">
+                    <p class="project-category"> Personal Website</p>
+                    <strong class="project-title">
+                        <span> My first project</span>
+                        <a href="./project1/index.html" class="more-details"> View project</a>
+                    </strong>
+                </div>
             </div>
             
     </section>
