--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <img src=".\img-portfolio\capture_project_1.png" alt="screenshot-of-my-project" height="200px">
                 </div>
                 <div class="project-info">
-                    <p class="project-category"> Personal Website</p>
+                    <p class="project-category"> Blog web application </p>
                     <strong class="project-title">
-                        <span> My first project</span>
-                        <a href="./project1/index.html" class="more-details"> View project</a>
+                        <span> Blog web application using Node.js, Express.js, and EJS. The application will allow users to create, edit and view blog posts.</span>
+                        <a href="./project2/app.js" class="more-details"> View project</a>
                     </strong>
                 </div>
             </div>
