--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="project-category"> Blog web application </p>
                     <strong class="project-title">
                         <span> Blog web application using Node.js, Express.js, and EJS. The application will allow users to create, edit and view blog posts.</span>
-                        <a href="./project2/app.js" class="more-details"> View project</a>
+                        <a href="projects/project2" class="more-details"> View project</a>
                     </strong>
                 </div>
             </div>
