--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div class="project-info">
                     <p class="project-category"> Blog web application </p>
                     <strong class="project-title">
-                        <span> Blog web application using Node.js, Express.js, and EJS. The application will allow users to create, edit and view blog posts.</span>
-                        <a href="projects/project2" class="more-details"> View project</a>
+                        <span> Built using Node.js, Express.js, and EJS. The app allows users to create, edit and view posts.</span>
+                        <a href="projects/project2" class="more-details"> View project </a>
                     </strong>
                 </div>
             </div>
